Statistics: Made the code better, and fixed the getMedian function

--- a/STATISTICS/deno.json
+++ b/STATISTICS/deno.json
@@ -4,5 +4,15 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
-  }
+  },
+  "compilerOptions": {
+    "lib": [
+      "es2017",
+      "dom"
+    ],
+    "strict": true
+  },
+  "unstable": [
+    "sloppy-imports"
+  ]
 }
